<resources>
    <string name="app_name">Daily Desserts</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="searchByName">Search by name</string>
    <string name="add_recipe">Add recipe</string>
    <string name="favorites">Favorites</string>
    <string name="my_recipes">My recipes</string>
    <string name="recipe_name">Recipe name</string>
    <string name="amount">amount</string>
    <string name="ingredients">Ingredients</string>
    <string name="measurement_examples">kg/l/cup</string>
    <string name="name">Name</string>
    <string name="ingredient_name">ingredient name</string>
    <string name="for1">For</string>
    <string name="add_ingredient">ADD INGREDIENT</string>
    <string name="people">people</string>
    <string name="preparation_time">Preparation time:</string>
    <string name="minutes">minutes</string>
    <string name="instructions">Instructions</string>
    <string name="write_your_instructions_here">write one step of the instructions here</string>
    <string name="difficulty_rating">Difficulty rating</string>
    <string name="_1_easy_5_difficult">(1 easy, 5 difficult)</string>
    <string name="author">Author</string>
    <string name="add_recipe_caps">ADD RECIPE</string>
    <string name="modify_recipe_caps">MODIFY RECIPE</string>
    <string name="add_instruction_step">ADD INSTRUCTION STEP</string>
    <string name="add_tags_here">Add tags here</string>
    <string name="search_by_tags">Tags</string>
    <string name="exact_name">Exact name</string>
    <string name="from">From</string>
    <string name="to">to</string>
    <string name="search_by_difficulty_level">Difficulty level</string>
    <string name="add_your_own_recipes">ADD A RECIPE</string>
    <string name="you_haven_t_added_any_favorites_yet">You haven\'t added any favorites yet</string>
    <string name="edit">Edit</string>
    <string name="difficulty">Difficulty</string>
    <string name="for_small">For</string>
    <string name="amount_of_servings">Amount of servings</string>
    <string name="delete">Delete</string>
    <string name="my_recipes_caps">MY RECIPES</string>
    <string name="dark_mode">DARK MODE</string>
</resources>
