<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageButton
            android:id="@+id/addPhotoPlaceholder"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="@null"
            android:src="@drawable/ic_add_photo_placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/recipe_name"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addPhotoPlaceholder" />

        <EditText
            android:id="@+id/editTextTextPersonName"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="16dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name" />

        <TextView
            android:id="@+id/ingredient"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/ingredients"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />

        <LinearLayout
            android:id="@+id/ingredient_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/ingredient"
            tools:layout_editor_absoluteX="29dp">

        </LinearLayout>

        <Button
            android:id="@+id/addIngredientButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/add_ingredient"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ingredient_list" />

        <EditText
            android:id="@+id/portionSize"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="19dp"
            android:ems="10"
            android:inputType="number"
            android:maxLength="3"
            android:textAlignment="center"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/portionSizeSplitText1"
            app:layout_constraintTop_toBottomOf="@+id/addIngredientButton" />

        <TextView
            android:id="@+id/portionSizeSplitText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/for1"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addIngredientButton" />

        <TextView
            android:id="@+id/portionSizeSplitText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="32dp"
            android:text="@string/people"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/portionSize"
            app:layout_constraintTop_toBottomOf="@+id/addIngredientButton" />

        <TextView
            android:id="@+id/prepTimeText1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/preparation_time"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/portionSize" />

        <EditText
            android:id="@+id/prepTime"
            android:layout_width="40dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="19dp"
            android:ems="10"
            android:inputType="number"
            android:maxLength="3"
            android:textAlignment="center"
            app:layout_constraintStart_toEndOf="@+id/prepTimeText1"
            app:layout_constraintTop_toBottomOf="@+id/portionSize" />

        <TextView
            android:id="@+id/prepTimeText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="32dp"
            android:text="@string/minutes"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/prepTime"
            app:layout_constraintTop_toBottomOf="@+id/portionSize" />

        <TextView
            android:id="@+id/instructionsText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/instructions"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/prepTime" />

        <LinearLayout
            android:id="@+id/instruction_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical"
            app:layout_constraintTop_toBottomOf="@+id/instructionsText"
            tools:layout_editor_absoluteX="29dp">

        </LinearLayout>

        <Button
            android:id="@+id/addInstructionsButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/add_instruction_step"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/instruction_list"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/levelOfDifficultyText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="25dp"
            android:text="@string/difficulty_rating"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/addInstructionsButton" />

        <Spinner
            android:id="@+id/levelOfDifficultyMenu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:layout_marginTop="25dp"
            app:layout_constraintStart_toEndOf="@+id/levelOfDifficultyText"
            app:layout_constraintTop_toBottomOf="@+id/addInstructionsButton" />

        <TextView
            android:id="@+id/authorText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:text="@string/author"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/levelOfDifficultyText" />

        <EditText
            android:id="@+id/author"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="21dp"
            app:layout_constraintStart_toEndOf="@+id/authorText"
            app:layout_constraintTop_toBottomOf="@+id/levelOfDifficultyText" />

        <Button
            android:id="@+id/addRecipeButton"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="35dp"
            android:text="@string/add_recipe_caps"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tagSelectorTv"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/tagSelectorTv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="16dp"
            android:background="@android:drawable/editbox_background"
            android:hint="@string/add_tags_here"
            android:textAlignment="center"
            android:textSize="20dp"
            app:drawableEndCompat="@android:drawable/arrow_down_float"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/author" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>